--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/nathan-cuvellier/SOS-SmithAndJones#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "helmet": "^3.21.2",
     "mysql": "^2.18.1"
   }
 }
