--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
     "helmet": "^3.21.2",
